--- a/test/index.html
+++ b/test/index.html
@@ -110,7 +110,8 @@
           4,000 lucky people will be able to receive valuable gifts from the online store Shein
         </p>
         <p class="text">
-          Today, November 9, 2022, you were invited to participate in this contest.
+          Today, <span class="dateToday">November 9, 2022</span>, you were invited to participate in
+          this contest.
         </p>
         <p class="text">
           Here’s what you need to do: answer 7 simple questions truthfully and get a chance to pick
@@ -189,7 +190,16 @@
           <img src="./img/4.png" alt="" />
         </div>
       </section>
-      <section class="page pageQuest page11" data-slider-item="slide11">
+      <section class="page pageQuest page12" data-slider-item="slide11">
+        <p class="mainTitle">Congratulations, your answers have been successfully accepted!</p>
+        <div class="pageQuest__img mb40">
+          <img src="./img/gift.png" alt="" />
+        </div>
+        <p class="subTitle w600 mb22 cDr">You have the chance to win one of SHEIN gift cards!</p>
+        <p class="subTitle w600 mb22 cDr">You just need to choose the right gift box.</p>
+        <button class="button" data-slider-btn="slide12">Start</button>
+      </section>
+      <section class="page pageQuest page11" data-slider-item="slide12">
         <p class="mainTitle">Now you have a chance to win one of our gift cards</p>
         <div class="pageQuest__img">
           <img src="./img/5-1.png" alt="" />
@@ -198,15 +208,6 @@
           <img src="./img/5-2.png" alt="" />
         </div>
         <p class="subTitle">Only 68 cards left out of 4000</p>
-      </section>
-      <section class="page pageQuest page12" data-slider-item="slide12">
-        <p class="mainTitle">Congratulations, your answers have been successfully accepted!</p>
-        <div class="pageQuest__img mb40">
-          <img src="./img/gift.png" alt="" />
-        </div>
-        <p class="subTitle w600 mb22 cDr">You have the chance to win one of SHEIN gift cards!</p>
-        <p class="subTitle w600 mb22 cDr">You just need to choose the right gift box.</p>
-        <button class="button" data-slider-btn="slide13">Start</button>
       </section>
       <section class="page pageQuest page13" data-slider-item="slide13">
         <p class="mainTitle">You have 3 attempts, good luck!</p>
@@ -273,6 +274,174 @@
         <a href="#" class="button">OK</a>
       </section>
     </main>
+    <div class="main-content" bis_skin_checked="1">
+      <link href="./css/css.css" rel="stylesheet" />
+      <link rel="stylesheet" type="text/css" href="./css/comments.min.css" />
+      <div class="comments_face" bis_skin_checked="1">
+        <div class="comments" bis_skin_checked="1">
+          <p style="margin: 0; padding: 0; float: left; display: block; width: 50%">
+            <span style="color: #3b5998">Opiniones mostradas</span>
+          </p>
+          <p
+            style="
+              margin: 0;
+              padding: 0;
+              float: right;
+              display: block;
+              width: 50%;
+              color: #a8a7a7;
+              text-align: right;
+            "
+          >
+            7 de 24
+          </p>
+          <div style="clear: both" bis_skin_checked="1"></div>
+        </div>
+        <div class="comments" id="comment0" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/1.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Anna Keenan</p>
+            <p>
+              Al principio no me lo creí, pero decidí probar y gané una tarjeta regalo de 800 euros,
+              ya he pedido 3 cajas grandes de cosas, ¡¡¡gracias SHEIN!!!)
+            </p>
+            <img
+              src="./img/image/photo_2021-08-27_12-18-29.jpg"
+              style="max-width: 400px; width: 100%; margin-bottom: 10px"
+            />
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 20</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+        <div class="comments" id="comment1" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/2.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Catherine Morel</p>
+            <p>
+              Increíble, yo tuve menos suerte, gané una tarjeta de 500 euros, pero accidentalmente
+              introduje un número de tarjeta en el que no tenía dinero y no pude pagar el envío,
+              después de eso mi oportunidad se esfumó(((( pues nada, esperemos que la próxima vez
+              haya suerte(
+            </p>
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 47</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+        <div class="comments" id="comment2" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/3.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Monika Dubuque</p>
+            <p>
+              ¡Jejejeje!, dice que sólo hay 1 oportunidad, es la protección de los bots, gané una
+              tarjeta de 25 euros, ¡Gracias Shein!
+            </p>
+            <img
+              src="./img/image/photo_2021-08-27_12-18-30.jpg"
+              style="max-width: 400px; width: 100%; margin-bottom: 10px"
+            />
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 3</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+        <div class="comments" id="comment3" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/4.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Joel Duroy</p>
+            <p>
+              Sin duda no he ganado un premio de 800 euros, pero 75 no es malo, será un gran regalo
+              para mi novia.
+            </p>
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 19</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+        <div class="comments" id="comment4" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/5.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Anne Dubois</p>
+            <p>Genial, no he ganado nada((.</p>
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 26</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+        <div class="comments" id="comment5" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/6.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Chloe Canedo</p>
+            <p>
+              Me encanta Shein por sus promociones, esta vez no ha funcionado pero el año pasado
+              gané una tarjeta de 1000 euros, ¡mira cuántas cosas compré entonces! ¡Shein, te
+              quiero! Ojalá hubiera más eventos como éste
+            </p>
+            <img
+              src="./img/image/photo_2021-08-27_12-18-31.jpg"
+              style="max-width: 400px; width: 100%; margin-bottom: 10px"
+            />
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 8</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+        <div class="comments" id="comment5" style="display: block" bis_skin_checked="1">
+          <div class="profile" bis_skin_checked="1"><img src="./img/image/7.jpg" /></div>
+          <div class="comment-content" bis_skin_checked="1">
+            <p class="name">Lily Morgan</p>
+            <p>Secundado) Recogí mi tarjeta ayer y voy a pedir cosas hoy</p>
+          </div>
+          <div class="clr" bis_skin_checked="1"></div>
+          <div class="comment-status" bis_skin_checked="1">
+            <span
+              >Me gusta · Responder
+              <img src="./img/image/like.png" width="15px" height="15px" /> 7</span
+            >
+            · <span class="p_var-dia">16</span>&nbsp;<span class="p_var-mes_nombre">November</span>,
+            <span class="p_var-anyo">2022</span>
+          </div>
+        </div>
+      </div>
+      <p style="font-size: 12px; color: #bcbcbc"></p>
+    </div>
 
     <script type="text/javascript" src="./js/scripts.min.js"></script>
   </body>
