--- a/test/index.html
+++ b/test/index.html
@@ -222,6 +222,100 @@
       </div>
     </div>
 
+    <div class="comments">
+      <div class="comments-inner">
+        <h1>Comments</h1>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a1.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Anna Keenan</h1>
+              <p>
+                Al principio no me lo creí, pero decidí probar y gané una tarjeta regalo de 800
+                euros, ya he pedido 3 cajas grandes de cosas, ¡¡¡gracias SHEIN!!!)
+              </p>
+              <h2>Reply . 13 . Like . 12 minutes ago</h2>
+            </div>
+          </div>
+        </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a2.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Catherine Morel</h1>
+              <p>
+                Increíble, yo tuve menos suerte, gané una tarjeta de 500 euros, pero accidentalmente
+                introduje un número de tarjeta en el que no tenía dinero y no pude pagar el envío,
+                después de eso mi oportunidad se esfumó(((( pues nada, esperemos que la próxima vez
+                haya suerte
+              </p>
+              <h2>Reply . 14 . Like . 16 minutes ago</h2>
+            </div>
+          </div>
+        </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a3.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Monika Dubuque</h1>
+              <p>
+                ¡Jejejeje!, dice que sólo hay 1 oportunidad, es la protección de los bots, gané una
+                tarjeta de 25 euros, ¡Gracias Shein!
+              </p>
+              <h2>Reply . 2 . Like . 1 hour ago</h2>
+            </div>
+          </div>
+        </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a4.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Anne Dubois</h1>
+              <p>Genial, no he ganado nada((</p>
+              <h2>Reply . 13 . Like . 12 minutes ago</h2>
+            </div>
+          </div>
+        </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a5.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Chloe Canedo</h1>
+              <p>
+                Me encanta Shein por sus promociones, esta vez no ha funcionado pero el año pasado
+                gané una tarjeta de 1000 euros, ¡mira cuántas cosas compré entonces! ¡Shein, te
+                quiero! Ojalá hubiera más eventos como éste.
+              </p>
+              <h2>Reply . 13 . Like . 12 minutes ago</h2>
+            </div>
+          </div>
+        </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a6.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Lily Morgan</h1>
+              <p>Secundado) Recogí mi tarjeta ayer y voy a pedir cosas hoy</p>
+              <h2>Reply . 13 . Like . 12 minutes ago</h2>
+            </div>
+          </div>
+        </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a7.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Joel Duroy</h1>
+              <p>
+                Sin duda no he ganado un premio de 800 euros, pero 75 no es malo, será un gran
+                regalo para mi novia
+              </p>
+              <h2>Reply . 13 . Like . 12 minutes ago</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript" src="./js/scripts.min.js"></script>
   </body>
 </html>
