--- a/test/index.html
+++ b/test/index.html
@@ -234,6 +234,7 @@
                 Al principio no me lo creí, pero decidí probar y gané una tarjeta regalo de 800
                 euros, ya he pedido 3 cajas grandes de cosas, ¡¡¡gracias SHEIN!!!)
               </p>
+              <img src="./img/b1.jpg" alt="" />
               <h2>Reply . 13 . Like . 12 minutes ago</h2>
             </div>
           </div>
@@ -291,16 +292,6 @@
           </div>
         </div>
         <div class="comment-box">
-          <div class="comment-pic inl"><img src="./img/a6.jpg" /></div>
-          <div class="comment-text inl">
-            <div class="comment-text-inner">
-              <h1>Lily Morgan</h1>
-              <p>Secundado) Recogí mi tarjeta ayer y voy a pedir cosas hoy</p>
-              <h2>Reply . 13 . Like . 12 minutes ago</h2>
-            </div>
-          </div>
-        </div>
-        <div class="comment-box">
           <div class="comment-pic inl"><img src="./img/a7.jpg" /></div>
           <div class="comment-text inl">
             <div class="comment-text-inner">
@@ -313,7 +304,49 @@
             </div>
           </div>
         </div>
+        <div class="comment-box">
+          <div class="comment-pic inl"><img src="./img/a6.jpg" /></div>
+          <div class="comment-text inl">
+            <div class="comment-text-inner">
+              <h1>Lily Morgan</h1>
+              <p>Secundado) Recogí mi tarjeta ayer y voy a pedir cosas hoy</p>
+
+              <img src="./img/b7.jpg" alt="" />
+              <h2>Reply . 13 . Like . 12 minutes ago</h2>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+
+    <div class="addComment">
+      <p class="title">Add a comment</p>
+      <from class="addComment__form">
+        <input type="text" class="addComment__input" placeholder="Your name" />
+        <textarea
+          class="addComment__input"
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Comment"
+        ></textarea>
+        <div class="addComment__inputFiles">
+          <label class="addComment__inputFile">
+            <input type="file" name="" id="" />
+            <span class="addComment__inputFileText">
+              <img src="./img/clip.png" alt="" /> Add an avatar
+            </span>
+          </label>
+          <label class="addComment__inputFile">
+            <input type="file" name="" id="" />
+            <span class="addComment__inputFileText">
+              <img src="./img/clip.png" alt="" />Add photo to comment
+            </span>
+          </label>
+        </div>
+        <button class="button">SEND</button>
+      </from>
     </div>
 
     <script type="text/javascript" src="./js/scripts.min.js"></script>
