--- a/test/index.html
+++ b/test/index.html
@@ -89,16 +89,16 @@
       </div>
       <ul class="wrapper review__video swiper swiperWr">
         <li class="swiperSlide">
-          <div class="video"><video controls src="../video/1.MP4"></video></div>
+          <div class="video"><video controls src="./video/1.MP4"></video></div>
         </li>
         <li class="swiperSlide">
-          <div class="video"><video controls src="../video/2.MP4"></video></div>
+          <div class="video"><video controls src="./video/2.MP4"></video></div>
         </li>
         <li class="swiperSlide">
-          <div class="video"><video controls src="../video/3.MP4"></video></div>
+          <div class="video"><video controls src="./video/3.MP4"></video></div>
         </li>
         <li class="swiperSlide">
-          <div class="video"><video controls src="../video/4.MP4"></video></div>
+          <div class="video"><video controls src="./video/4.MP4"></video></div>
         </li>
       </ul>
       <div class="review__photo wrapper swiper swiperWr">
