--- a/test/index.html
+++ b/test/index.html
@@ -156,7 +156,7 @@
         <div class="swiperSlide">
           <div class="photo">
             <div class="photo__img">
-              <img src="./img/comments/4.JPG" alt="" />
+              <img src="./img/comments/4.jpg" alt="" />
               <div class="photo__city txt25x30">Санкт-Петербург</div>
             </div>
             <div class="photo__cnt">
