--- a/test/index.html
+++ b/test/index.html
@@ -92,13 +92,13 @@
           <div class="video"><video controls src="./video/1.MP4"></video></div>
         </li>
         <li class="swiperSlide">
-          <div class="video"><video controls src="./video/2.MP4"></video></div>
+          <div class="video"><video controls src="./video/2.mp4"></video></div>
         </li>
         <li class="swiperSlide">
-          <div class="video"><video controls src="./video/3.MP4"></video></div>
+          <div class="video"><video controls src="./video/3.mp4"></video></div>
         </li>
         <li class="swiperSlide">
-          <div class="video"><video controls src="./video/4.MP4"></video></div>
+          <div class="video"><video controls src="./video/4.mp4"></video></div>
         </li>
       </ul>
       <div class="review__photo wrapper swiper swiperWr">
