--- a/test/1/verification.html
+++ b/test/1/verification.html
@@ -6,22 +6,22 @@
     <title>Title</title>
 
     <!-- Иконка для сайта
-	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/icon-48.png">
-	<link rel="icon" type="image/png" sizes="144x144" href="./img/favicon/icon-144.png">
-	<link rel="icon" type="image/png" sizes="256x256" href="./img/favicon/icon-256.png">  -->
+	<link rel="icon" type="image/png" sizes="48x48" href="./assets/img/favicon/icon-48.png">
+	<link rel="icon" type="image/png" sizes="144x144" href="./assets/img/favicon/icon-144.png">
+	<link rel="icon" type="image/png" sizes="256x256" href="./assets/img/favicon/icon-256.png">  -->
 
     <meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no" />
 
-    <link media="all" rel="stylesheet" type="text/css" href="./css/styles.min.css" />
+    <link media="all" rel="stylesheet" type="text/css" href="./assets/css/styles.min.css" />
   </head>
   <body class="themeDark">
     <section class="verification" data-verification-wrapper>
       <div class="verification__wrapper wrapper">
         <div class="verification__img">
-          <img src="./img/verif.png" alt="" /><img src="./img/verif2.png" alt="" />
+          <img src="./assets/img/verif.png" alt="" /><img src="./assets/img/verif2.png" alt="" />
         </div>
 
         <ul class="timer" data-timer>
@@ -84,11 +84,11 @@
     </section>
     <footer class="footer">
       <div class="footer__wrapper">
-        <div class="footer__img"><img src="./img/logofooter.png" alt="" /></div>
+        <div class="footer__img"><img src="./assets/img/logofooter.png" alt="" /></div>
         <p class="footer__text">2022-2023 Все права защищены</p>
       </div>
     </footer>
-    <script type="text/javascript" src="./js/swiper.min.js"></script>
-    <script type="text/javascript" src="./js/scripts.min.js"></script>
+    <script type="text/javascript" src="./assets/js/swiper.min.js"></script>
+    <script type="text/javascript" src="./assets/js/scripts.min.js"></script>
   </body>
 </html>
