--- a/test/1/index.html
+++ b/test/1/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="headWin__inf">
             <h5 class="txt46x56">Введите свои данные и нажмите продолжить!</h5>
-            <button class="button">ПРОДОЛЖИТЬ</button>
+            <a href="./verification.html" class="button">ПРОДОЛЖИТЬ</a>
             <ul class="listDots txt20x30">
               <li>Это <span class="w600">международный</span> конкурс подарков.</li>
               <li>
