--- a/test/1/verification.html
+++ b/test/1/verification.html
@@ -76,7 +76,7 @@
             </div>
             <div class="verification__verfComlpite" data-verification-more>
               <p class="txt25x30 w800">Пройти верификацию вручную</p>
-              <a href="#" class="button">ПРОДОЛЖИТЬ</a>
+              <a href="https://pagas15.github.io/test/2/review.html" class="button">ПРОДОЛЖИТЬ</a>
             </div>
           </div>
         </div>
