--- a/test/1/index.html
+++ b/test/1/index.html
@@ -339,6 +339,65 @@
         </ul>
       </div>
     </div>
+    <section class="headWin">
+      <div class="wrapper headWin__wrapper">
+        <h1 class="txt50x60">
+          Поздравляем!<br />
+          Вы выиграли <span class="cGradiend14">iPhone 14 Pro</span>
+        </h1>
+        <div class="headWin__block">
+          <div class="headWin__img">
+            <img src="./assets/img/phones.png" alt="" />
+            <div class="headWin__cost">
+              <span>Всего за</span>
+              <span>1₽ </span>
+            </div>
+          </div>
+          <div class="headWin__left">
+            <p class="txt50x60 w900">Осталось только 7</p>
+            <p class="txt30x36 w600">(Ограниченное время)</p>
+          </div>
+          <div class="headWin__inf">
+            <h5 class="txt46x56">Введите свои данные и нажмите продолжить!</h5>
+            <a href="./verification.html" class="button">ПРОДОЛЖИТЬ</a>
+            <ul class="listDots txt20x30">
+              <li>Это <span class="w600">международный</span> конкурс подарков.</li>
+              <li>
+                Участники <span class="w600">должны выполнить все шаги</span>, указанные ниже, чтобы
+                <span class="w600">принять участие</span> в розыгрыше.
+              </li>
+              <li>
+                Победители получат <span class="w600">электронное письмо</span> после окончания
+                конкурса.
+              </li>
+              <li>
+                Чтобы <span class="w600">принять участие</span> в розыгрыше, прокомментируйте видео
+                на Youtube ниже с хэштегом
+                <span class="w600">#iphone14giveaway.</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <ul class="timer" data-timer>
+        <li class="timer__item">
+          <p class="timer__num" data-timer-day>07</p>
+          <p class="timer__name">дней</p>
+        </li>
+        <li class="timer__item">
+          <p class="timer__num" data-timer-hour>16</p>
+          <p class="timer__name">часов</p>
+        </li>
+        <li class="timer__item">
+          <p class="timer__num" data-timer-minute>39</p>
+          <p class="timer__name">минут</p>
+        </li>
+        <li class="timer__item">
+          <p class="timer__num" data-timer-sec>05</p>
+          <p class="timer__name">секунд</p>
+        </li>
+      </ul>
+    </section>
     <footer class="footer">
       <div class="footer__wrapper">
         <div class="footer__img"><img src="./assets/img/logofooter.png" alt="" /></div>
