--- a/test/index.html
+++ b/test/index.html
@@ -113,7 +113,7 @@
             </p>
           </div>
           <div class="changes__item">
-            <div class="changes__img"><img src="./img/cnt/1.png" alt="" /></div>
+            <div class="changes__img"><img src="./img/cnt/2.jpg" alt="" /></div>
             <div class="changes__times">
               <span class="bgGr">до</span>
               <span class="bgGr">после</span>
@@ -134,7 +134,7 @@
             </p>
           </div>
           <div class="changes__item">
-            <div class="changes__img"><img src="./img/cnt/1.png" alt="" /></div>
+            <div class="changes__img"><img src="./img/cnt/3.jpg" alt="" /></div>
             <div class="changes__times">
               <span class="bgGr">до</span>
               <span class="bgGr">после</span>
@@ -155,7 +155,7 @@
             </p>
           </div>
           <div class="changes__item">
-            <div class="changes__img"><img src="./img/cnt/1.png" alt="" /></div>
+            <div class="changes__img"><img src="./img/cnt/4.jpg" alt="" /></div>
             <div class="changes__times">
               <span class="bgGr">до</span>
               <span class="bgGr">после</span>
@@ -255,7 +255,7 @@
           <img src="./img/fit100.png" alt="" />
         </div>
       </div>
-      <button class="btnGreen">получить мой план</button>
+      <button class="btnGreen" data-scroll>получить мой план</button>
     </section>
 
     <footer class="footer">
