--- a/test/modal.html
+++ b/test/modal.html
@@ -17,8 +17,8 @@
 
     <link media="all" rel="stylesheet" type="text/css" href="./assets/css/styles.min.css" />
   </head>
-  <body>
-    <header class="header" id="header">
+  <body style="overflow: hidden">
+    <header class="header">
       <div class="wrapper header__wrapper">
         <div class="header__cnt">
           <div class="logo"><img src="./assets/img/logo.png" alt="" /></div>
@@ -32,7 +32,6 @@
             <li class="navBar__item"><a href="#" class="navBar__link">Chcplay</a></li>
           </ul>
         </div>
-        <div class="header__btn" id="btnHeader"><span></span><span></span><span></span></div>
       </div>
     </header>
     <main class="main">
@@ -54,7 +53,7 @@
         </section>
         <section class="main__section block">
           <div class="blockTitle blockTitle--left">
-            Лицензия на игорную деятельность <span class="arrow"></span>
+            Лицензия на игорную деятельность<span class="arrow"></span>
           </div>
           <div class="blockRow">
             <div class="blockText">
@@ -426,7 +425,7 @@
       </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup active">
       <div class="popup__item">
         <button class="popup__close"></button>
         <p class="popup__text">
